# GLWL

./: .gitignore  CMakeLists.txt  GLWL.sln  GOGLL.VC.db  GOGLL.sln  README.md
GOGLL/: GOGLL.vcxproj  GOGLL.vcxproj.filters
GOGLL/headers/: mat4.h  vec4.h
GOGLL/headers/util/: shader.h  vertex_buffer.h
GOGLL/src/: mat4.cpp  vec4.cpp
GOGLL/src/math/: mat4.cpp
GOGLL/src/util/: shader.cpp  vertex_buffer.cpp
glwl/: glwl.vcxproj  glwl.vcxproj.filters
glwl/headers/util/: frame_buffer.h  image.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
glwl/src/util/: frame_buffer.cpp  image.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
glwl_math/: glwl_math.vcxproj  glwl_math.vcxproj.filters
glwl_math/headers/math/: mat4.h  vec4.h
glwl_math/src/math/: mat4.cpp  vec4.cpp
gogll/: gogll.vcxproj  gogll.vcxproj.filters
gogll/headers/util/: Image.h  image.h  shader.h  texture.h  vertex_buffer.h
gogll/src/util/: image.cpp  shader.cpp  texture.cpp
gogll_math/: gogll_math.vcxproj  gogll_math.vcxproj.filters
gogll_math/headers/math/: mat4.h
gogll_math/src/math/: mat4.cpp  vec4.cpp
gogll_r/: gogll.vcxproj  gogll.vcxproj.filters
include/Math/: Matrix4.h  Quat.h  Vector3.h  Vector4.h
include/Util/: FrameBuffer.h  Image.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
include/Util-r/: Texture.h
include/math/: mat4.h
include/util/: shader.h  vertex_array.h
src/Math/: Matrix4.cpp  Quat.cpp  Vector3.cpp  Vector4.cpp
src/Math-r/: Matrix4.cpp
src/Util/: FrameBuffer.cpp  Image.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Util-r/: FrameBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/math/: mat4.cpp
src/util/: frame_buffer.cpp  vertex_array.cpp
